Add 5 mais importantes
Visualização dos 5 maiores usando pandas

--- a/PythonIA.ipynb
+++ b/PythonIA.ipynb
@@ -712,6 +712,7 @@
     }
    ],
    "source": [
+    "#vizualizando em um grafico\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -731,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "3962519a",
    "metadata": {},
    "outputs": [
@@ -750,7 +751,8 @@
     }
    ],
    "source": [
-    "print(importancia.loc[(importancia[\"0\"] >= 7)])"
+    "#vizualizando as 5 mais importantes\n",
+    "print((importancia).sort_values(by=0, ascending = False).head(5))"
    ]
   },
   {
