--- a/PythonIA.ipynb
+++ b/PythonIA.ipynb
@@ -712,7 +712,7 @@
     }
    ],
    "source": [
-    "#vizualização em um gráfico\n",
+    "#vizualização em um gráfico baseado no MDI (mean decrease in impurity)\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "\n",
