--- a/PythonIA.ipynb
+++ b/PythonIA.ipynb
@@ -713,6 +713,10 @@
    ],
    "source": [
     "#vizualização em um gráfico baseado no MDI (mean decrease in impurity)\n",
+    "\n",
+    "#Warning: Impurity-based feature importances can be misleading for high cardinality features (many unique values). \n",
+    "#See Permutation feature importance as an alternative below.\n",
+    "\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "\n",
